# m2-image-hdr

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
ia/: autoencoder.py  importData.py
model/: Image.cpp  Image.hpp  Pipeline.hpp  StackImage.cpp  StackImage.hpp
view/: ImageViewerUp.cpp  ImageViewerUp.hpp  ImageWidget.cpp  ImageWidget.hpp  MainWindow.cpp  MainWindow.hpp  Pipeline.hpp  StackImageWidget.cpp  StackImageWidget.hpp  ToneMapSettings.cpp  ToneMapSettings.h  ToneMapSettings.hpp  ZoomableImageWidget.cpp  ZoomableImageWidget.hpp  ZoomedWindow.cpp  ZoomedWindow.hpp
